--- a/experiments/goal_actions/css/style.css
+++ b/experiments/goal_actions/css/style.css
@@ -11,6 +11,79 @@ body {
 	line-height: 20px;
 }
 
+td {
+  padding-top: 10px;
+  padding-bottom: 40px;
+}
+
+td.slider_labels{
+ padding-bottom: 5px; 
+ font-size: 18px;
+}
+
+#slider_table {
+  width: 80%;
+}
+
+.slider_container {
+  height: 70px;
+  width: 500px;
+  padding-right: 5px;
+  text-align: left;
+}
+
+.slider_labels {
+  width: 400;
+}
+
+.left_label {
+  display: inline;
+  float: left;
+}
+
+.right_label {
+  display: inline;
+  float: right;
+}
+
+#slider_table td {
+  text-align: center;
+  font-size: 20px
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
 
 /** We manage display using "slides". A slide is a <code>div</code> that takes up the entire page. Only one slide should be visible at a time. Navigation between slides is most sensibly accomplished using using buttons, rather than keyboard events. */
 .slide {
