--- a/experiments/goal_actions/css/style.css
+++ b/experiments/goal_actions/css/style.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: Palatino Linotype, Bookman Antiqua, Palatino, serif;
-	font-size: 16px;
+	font-size: 17px;
 	line-height: 20px;
 }
 
@@ -18,15 +18,19 @@ td {
 
 td.slider_labels{
  padding-bottom: 5px; 
- font-size: 14px;
+ font-size: 15px;
 }
 
 #goal_text {
   width: 600px;
-  font-size: 18px;
+  font-size: 17px;
 }
 
 #slider_table {
+  width: 80%;
+}
+
+#actions_table {
   width: 80%;
 }
 
@@ -39,24 +43,24 @@ td.slider_labels{
 
 .slider_labels {
   width: 400;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .left_label {
   display: inline;
   float: left;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .right_label {
   display: inline;
   float: right;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 #slider_table td {
   text-align: center;
-  font-size: 16px
+  font-size: 17px;
 }
 
 .slider {
@@ -106,7 +110,7 @@ td.slider_labels{
 
 input, select, button {font-family: Georgia, serif; font-size: 14px;}
 
-button {
+/*button {
 	background: url(images/button-gradient.png);
 	border: 1px solid #999;
 	border-top: 1px solid #e0e0e0;
@@ -116,35 +120,55 @@ button {
 	padding-right: 5px;
 	height: 29px;
 	min-width: 70px;
+}*/
+
+button {
+  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  box-shadow:inset 0px 1px 0px 0px #ffffff;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
+  background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+  background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
+  background-color:#f9f9f9;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+  border-radius:6px;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  cursor:pointer;
+  color:#666666;
+  font-family:arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:6px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #ffffff;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-button2 {
-	background: url(images/button-gradient.png);
-	border: 1px solid #999;
-	border-top: 1px solid #e0e0e0;
-	border-left: 1px solid #e0e0e0;
-	margin: 40px;
-	padding-left: 5px;
-	padding-right: 5px;
-	height: 29px;
-	min-width: 70px;
+button:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
+  background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+  background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
+  background-color:#e9e9e9;
 }
 button:active {
-	border-left: 1px solid #c9c9c9;
-	border-top: 1px solid #c9c9c9;
-	background: none;
-	background-color: #c9c9c9;
+  position:relative;
+  top:1px;
 }
 
-button[disabled] {
-	background: url(zen-button.png);
-	border: 1px solid #999;
-	border-top: 1px solid #e0e0e0;
-	border-left: 1px solid #e0e0e0;
-	cursor: not-allowed;
+form {
+  width: 400px;
 }
-
-
 
 /**
 ## Experiment-specific styles
@@ -201,10 +225,15 @@ This stuff will vary by experiment.
 
 .action-text{
   width: 500px;
-  text-align: center;
+  text-align: justify;
   margin: 0 auto;
   margin-bottom: 1em;
+}
 
+#action-buttons {
+  width: 400px;
+  text-align: left;
+  margin: 0 auto;
 }
 
 .block-text {
