updated 3-goal cond expt, with different wording for action choices

--- a/experiments/goal_actions_ver2/css/style.css
+++ b/experiments/goal_actions_ver2/css/style.css
@@ -239,6 +239,10 @@ This stuff will vary by experiment.
   margin: 0 auto;
 }
 
+.btn-action {
+    text-align:left;
+}
+
 .block-text {
   width: 500px;
   text-align: justify;
