finished v2; added social cond; added no-goal cond

--- a/experiments/04_cat/css/local-style.css
+++ b/experiments/04_cat/css/local-style.css
@@ -17,6 +17,13 @@
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
+  width: 33%;
+  padding: 5px;
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.test_column {
+  float: left;
   width: 50%;
   padding: 5px;
 }
