minor wording change to test prompt; restricted browser to chrome/firefox

--- a/experiments/04_cat/css/local-style.css
+++ b/experiments/04_cat/css/local-style.css
@@ -4,6 +4,12 @@
   margin: 10px;
 }
 
+#init_msg {
+  color: red;
+  font-weight: bold;
+  display: none;
+}
+
 .display_condition {
   font-weight: bold;
 }
